--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "db:migrate": "drizzle-kit migrate --config=app/drizzle.config.ts"
   },
   "dependencies": {
+    "@clerk/backend": "^1.29.1",
+    "@clerk/nextjs": "^6.16.0",
     "@tanstack/react-table": "^8.21.2",
     "@tanstack/react-virtual": "^3.13.6",
     "class-variance-authority": "^0.7.1",
@@ -31,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cross-env": "^7.0.3",
     "drizzle-kit": "^0.31.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
