--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@clerk/nextjs": "^6.16.0",
     "@tanstack/react-table": "^8.21.2",
     "@tanstack/react-virtual": "^3.13.6",
+    "@types/pg": "^8.11.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.42.0",
     "lucide-react": "^0.486.0",
     "next": "15.2.4",
+    "pg": "^8.15.1",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
