--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@clerk/backend": "^1.29.1",
-    "@clerk/nextjs": "^6.16.0",
+    "@clerk/nextjs": "^6.17.0",
     "@tanstack/react-table": "^8.21.2",
     "@tanstack/react-virtual": "^3.13.6",
     "@types/pg": "^8.11.13",
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.42.0",
+    "geist": "^1.3.1",
     "lucide-react": "^0.486.0",
     "next": "15.2.4",
     "pg": "^8.15.1",
